# inquire

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CRATE_README.md  Cargo.toml  KEY_BINDINGS.md  LICENSE  README.md  clippy.toml  release.sh  release.toml
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: build.yml  changelog-check.yml  linux.yml  macos.yml  release.yml  test.yml  windows.yml
assets/: confirm_simple.cast  custom_type.cast  date_complete.cast  editor.cast  expense_tracker.cast  form.cast  inquire.pxz  multiselect.cast  password_simple.cast  render_config.cast  select.cast  text_simple.cast
examples/: Cargo.toml  autocomplete_path.rs  complex_autocompletion.rs  confirm.rs  confirm_on_input.rs  confirm_simple.rs  core  custom_type.rs  date.rs  date_complete.rs  editor.rs  empty_render_config.rs  enum_comprehensive.rs  enum_select_raw.rs  expense_tracker.rs  form.rs  input.rs  lib.rs  manual_date_input.rs  multiline_demo.rs  multiselect.rs  multiselect_tabular.rs  multiselect_tabular_separators.rs  password_full_featured.rs  password_no_confirmation.rs  password_simple.rs  password_unmasked_last_char.rs  release.toml  render_config.rs  select.rs  select_range.rs  text.rs  text_options.rs  text_simple.rs
inquire/: CRATE_README.md  Cargo.toml  release.toml
inquire-derive/: CRATE_README.md  Cargo.toml  release.toml
inquire-derive/examples/: enum_select_derive.rs
inquire-derive/src/: codegen.rs  field.rs  lib.rs  structural.rs  utils.rs
inquire-derive/src/helpers/: mod.rs  vec.rs
inquire-derive/src/prompts/: confirm.rs  custom_type.rs  date_select.rs  editor.rs  inquire_form.rs  mod.rs  multi_select.rs  nested.rs  password.rs  select.rs  text.rs
inquire-derive/tests/: integration.rs
inquire-test/: CRATE_README.md  Cargo.toml
inquire-test/example/: confirm.rs  custom_type.rs  date_select.rs  demo.rs  editor.rs  form.rs  multi_select.rs  password.rs  select.rs  skip.rs  text.rs
inquire-test/src/: lib.rs
inquire/examples/: complex_autocompletion.rs  confirm.rs  confirm_simple.rs  custom_type.rs  date.rs  editor.rs  enum_select_raw.rs  expense_tracker.rs  multicount.rs  password_simple.rs  path_select.rs  select.rs  text_options.rs
inquire/src/: ansi.rs  autocompletion.rs  config.rs  date_utils.rs  error.rs  formatter.rs  history.rs  input.rs  lib.rs  list_option.rs  parser.rs  tabular.rs  type_aliases.rs  utils.rs  validator.rs
inquire/src/api/: common.rs  dateselect.rs  editor.rs  mod.rs  one_liners.rs
inquire/src/input/: action.rs  mod.rs  test.rs
inquire/src/new_prompts/: action.rs  action_result.rs  base.rs  date_prompt.rs  mod.rs  prompt_state.rs
inquire/src/new_prompts/variants/: dateselect.rs  editor.rs  mod.rs
inquire/src/prompts/: action.rs  dateselect.rs  editor.rs  mod.rs  multiselect.rs  one_liners.rs  path_select.rs  prompt.rs  prompt_common.rs  select.rs  test.rs
inquire/src/prompts/confirm/: action.rs  actions.rs  mod.rs  test.rs
inquire/src/prompts/custom_type/: action.rs  config.rs  mod.rs  prompt.rs
inquire/src/prompts/dateselect/: action.rs  actions.rs  config.rs  mod.rs  prompt.rs  test.rs
inquire/src/prompts/editor/: action.rs  config.rs  mod.rs  prompt.rs
inquire/src/prompts/multicount/: action.rs  config.rs  mod.rs  prompt.rs  test.rs
inquire/src/prompts/multiselect/: action.rs  actions.rs  config.rs  mod.rs  prompt.rs  test.rs
inquire/src/prompts/password/: action.rs  config.rs  mod.rs  prompt.rs  test.rs
inquire/src/prompts/path_select/: action.rs  config.rs  mod.rs  modes.rs  path_entry.rs  prompt.rs  test.rs
inquire/src/prompts/reorder/: mod.rs  prompt.rs  test.rs
inquire/src/prompts/select/: action.rs  actions.rs  config.rs  mod.rs  prompt.rs  test.rs
inquire/src/prompts/text/: action.rs  config.rs  mod.rs  prompt.rs  test.rs
inquire/src/terminal/: console.rs  crossterm.rs  mod.rs  termion.rs  test.rs
inquire/src/ui/: action.rs  backend.rs  dimension.rs  frame_renderer.rs  help_message.rs  input_reader.rs  key.rs  mod.rs  render_config.rs  renderer.rs  style.rs  untitled_render_box_abstraction.rs
inquire/src/ui/api/: key.rs  mod.rs  render_config.rs
oma-inquire/: Cargo.toml  release.toml
oma-inquire-derive/: CRATE_README.md  Cargo.toml  release.toml
oma-inquire/examples/: manual_date_input.rs  password_no_confirmation.rs
oma-inquire/src/: autocompletion.rs  date_utils.rs  enum_support.rs  error.rs  list_option.rs  type_aliases.rs  utils.rs  validator.rs
oma-inquire/src/input/: mod.rs  test.rs
oma-inquire/src/prompts/: action.rs  one_liners.rs  prompt.rs  test.rs
oma-inquire/src/prompts/confirm/: test.rs
oma-inquire/src/prompts/custom_type/: mod.rs
oma-inquire/src/prompts/dateselect/: config.rs  prompt.rs
oma-inquire/src/prompts/editor/: action.rs  prompt.rs
oma-inquire/src/prompts/multiselect/: config.rs
oma-inquire/src/prompts/text/: action.rs  prompt.rs
oma-inquire/src/terminal/: console.rs  crossterm.rs  termion.rs  test.rs
oma-inquire/src/ui/: backend.rs  dimension.rs  frame_renderer.rs  input_reader.rs
oma-inquire/src/ui/api/: key.rs  style.rs
src/: answer.rs  ask.rs  autocompletion.rs  config.rs  confirm.rs  cross_renderer.rs  cross_terminal.rs  date_utils.rs  error.rs  formatter.rs  input.rs  key.rs  lib.rs  list_option.rs  multiselect.rs  option_answer.rs  parser.rs  question.rs  renderer.rs  select.rs  survey.rs  terminal.rs  type_aliases.rs  utils.rs  validator.rs
src/prompts/: confirm.rs  custom_type.rs  date_select.rs  dateselect.rs  editor.rs  input.rs  mod.rs  multiselect.rs  password.rs  prompt_common.rs  range_select.rs  select.rs  text.rs
src/terminal/: console.rs  console_unix.rs  crossterm.rs  mod.rs  termion.rs
src/ui/: backend.rs  color.rs  color_theme.rs  key.rs  mod.rs  old_terminal.rs  render_config.rs  renderer.rs  style.rs  terminal.rs
