[package]
name = "inquire"
version = "0.0.11-alpha.0"
description = "inquire is a library for building interactive prompts on terminals"
repository = "https://github.com/mikaelmello/inquire"
license = "MIT"
edition = "2018"
readme = "./CRATE_README.md"
documentation = "https://docs.rs/inquire"
homepage = "https://github.com/mikaelmello/inquire"
authors = ["Mikael Mello <git@mikaelmello.com>"]
keywords = ["cli", "ask", "prompt", "question", "interactive"]
categories = ["command-line-interface", "value-formatting"]
include = ["/examples", "/src", "/LICENSE"]

[features]
default = ["builtin_validators", "crossterm"]
builtin_validators = []
date = ["chrono"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
crossterm = { version = "0.21", optional = true }
termion = { version = "1.5.6", optional = true }
unicode-segmentation = "1"
chrono = { version = "0.4", optional = true }
thiserror = "1"
bitflags = "1.0"
lazy_static = "1.4.0"
newline-converter = "0.2.0"
unicode-width = "0.1.8"

[[example]]
name = "form"
required-features = ["date"]

[[example]]
name = "date"
required-features = ["date"]

[[example]]
name = "expense_tracker"
required-features = ["date"]

[[example]]
name = "render_config"
required-features = ["date"]

[[example]]
name = "empty_render_config"
required-features = ["date"]

[[example]]
name = "date_complete"
required-features = ["date"]

[[example]]
name = "manual_date_input"
required-features = ["date"]
