[package]
name = "inquire"
version = "0.0.11-alpha.0"
description = "inquire is a library for building interactive prompts on terminals"
repository = "https://github.com/mikaelmello/inquire"
license = "MIT"
edition = "2018"
readme = "./CRATE_README.md"
documentation = "https://docs.rs/inquire"
homepage = "https://github.com/mikaelmello/inquire"
authors = ["Mikael Mello <git@mikaelmello.com>"]
keywords = ["cli", "ask", "prompt", "question", "interactive"]
categories = ["command-line-interface", "value-formatting"]
include = ["/examples", "/src", "/LICENSE"]

[features]
default = ["builtin_validators", "crossterm"]
builtin_validators = []
date = ["chrono"]
editor = ["tempfile"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
crossterm = { version = "0.21", optional = true }
termion = { version = "1.5", optional = true }
console = { version = "0.14", optional = true, features = ["windows-console-colors"] }

chrono = { version = "0.4", optional = true }

tempfile = { version = "3", optional = true }

thiserror = "1"
bitflags = "1"
lazy_static = "1.4"
newline-converter = "0.2"

unicode-segmentation = "1"
unicode-width = "0.1"

[[example]]
name = "form"
required-features = ["builtin_validators", "date"]

[[example]]
name = "date"
required-features = ["builtin_validators", "date"]

[[example]]
name = "editor"
required-features = ["editor"]

[[example]]
name = "expense_tracker"
required-features = ["builtin_validators", "date"]

[[example]]
name = "render_config"
required-features = ["builtin_validators", "date"]

[[example]]
name = "empty_render_config"
required-features = ["builtin_validators", "date"]

[[example]]
name = "text_options"
required-features = ["builtin_validators"]

[[example]]
name = "password_full_featured"
required-features = ["builtin_validators"]

[[example]]
name = "date_complete"
required-features = ["date"]

[[example]]
name = "manual_date_input"
required-features = ["date"]
