[package]
name = "inquire-derive"
version = "0.9.1"
description = "Derive macros for the inquire crate"
repository = "https://github.com/mikaelmello/inquire"
license = "MIT"
edition = "2021"
readme = "./CRATE_README.md"
documentation = "https://docs.rs/inquire-derive"
homepage = "https://github.com/mikaelmello/inquire"
authors = ["Mikael Mello <git@mikaelmello.com>"]
keywords = ["cli", "ask", "prompt", "question", "interactive"]
categories = ["command-line-interface", "value-formatting"]
include = ["/src", "/../LICENSE"]
rust-version = "1.80.0"

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full", "extra-traits"] }

[dev-dependencies]
inquire = { path = "../inquire" }
