[package]
name = "inquire"
version = "0.7.5"
description = "inquire is a library for building interactive prompts on terminals"
repository = "https://github.com/mikaelmello/inquire"
license = "MIT"
edition = "2018"
readme = "./CRATE_README.md"
documentation = "https://docs.rs/inquire"
homepage = "https://github.com/mikaelmello/inquire"
authors = ["Mikael Mello <git@mikaelmello.com>"]
keywords = ["cli", "ask", "prompt", "question", "interactive"]
categories = ["command-line-interface", "value-formatting"]
include = ["/examples", "/src", "/../LICENSE"]
rust-version = "1.66.0"

[lib]
name = "inquire"
path = "src/lib.rs"
doctest = true

[features]
default = ["macros", "crossterm", "one-liners", "fuzzy"]
macros = []
one-liners = []
date = ["chrono"]
editor = ["tempfile"]
fuzzy = ["fuzzy-matcher"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
crossterm = { version = "0.25", optional = true }
termion = { version = "2.0", optional = true }
console = { version = "0.15", optional = true, features = [
  "windows-console-colors",
] }

chrono = { version = "0.4", optional = true }

tempfile = { version = "3", optional = true }

fuzzy-matcher = { version = "0.3.7", default-features = false, optional = true }

bitflags = "2"
dyn-clone = "1"
once_cell = "1.18.0"
unicode-segmentation = "1"
unicode-width = "0.1"
fxhash = "0.2"

[dev-dependencies]
rstest = "0.18.2"
chrono = { version = "0.4" }

[[example]]
name = "form"
required-features = ["date", "macros"]

[[example]]
name = "date"
required-features = ["date", "macros"]

[[example]]
name = "editor"
required-features = ["editor"]

[[example]]
name = "expense_tracker"
required-features = ["date", "macros"]

[[example]]
name = "render_config"
required-features = ["date", "macros"]

[[example]]
name = "empty_render_config"
required-features = ["date", "macros"]

[[example]]
name = "text_options"
required-features = ["macros"]

[[example]]
name = "password_full_featured"
required-features = ["macros"]

[[example]]
name = "manual_date_input"
required-features = ["date"]
