[package]
name = "inquire"
version = "0.9.0"
description = "inquire is a library for building interactive prompts on terminals"
repository = "https://github.com/mikaelmello/inquire"
license = "MIT"
edition = "2018"
readme = "./CRATE_README.md"
documentation = "https://docs.rs/inquire"
homepage = "https://github.com/mikaelmello/inquire"
authors = ["Mikael Mello <git@mikaelmello.com>"]
keywords = ["cli", "ask", "prompt", "question", "interactive"]
categories = ["command-line-interface", "value-formatting"]
include = ["/src", "/../LICENSE"]
rust-version = "1.80.0"

[lib]
name = "inquire"
path = "src/lib.rs"
doctest = true

[features]
default = ["macros", "crossterm", "one-liners", "fuzzy"]
macros = []
one-liners = []
date = ["chrono"]
editor = ["tempfile"]
fuzzy = ["fuzzy-matcher"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
crossterm = { version = "0.29.0", optional = true }
termion = { version = "4.0", optional = true }
console = { version = "0.16", optional = true, features = [
  "windows-console-colors",
] }

chrono = { version = "0.4", optional = true }

tempfile = { version = "3", optional = true }

fuzzy-matcher = { version = "0.3.7", default-features = false, optional = true }

bitflags = "2"
dyn-clone = "1"
unicode-segmentation = "1"
unicode-width = "0.2"

[dev-dependencies]
rstest = "0.26.1"
chrono = { version = "0.4" }

